# text-editor

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: PieceTable.cpp.4A35EA1553729F27.idx  PieceTable.h.D04E66744A4DF30E.idx  SDL.c.BEB018B10BA15FCD.idx  SDL.h.68F3BBD352D97F87.idx  SDL_RLEaccel.c.2D680CC075984D11.idx  SDL_RLEaccel_c.h.7BE41014E6A124F1.idx  SDL_alsa_audio.c.6DC0461F72708EC3.idx  SDL_alsa_audio.h.F9AA68F9B997CF38.idx  SDL_appid.c.A52FC7FE7803AA03.idx  SDL_appid.h.1CCBC909C72AEB87.idx  SDL_assert.c.59B10B461D9AFACB.idx  SDL_assert.h.7051F69B7A605D05.idx  SDL_assert_c.h.C4FDE75A76C73EE2.idx  SDL_asyncio.c.C23E35758A505CD0.idx  SDL_asyncio.h.E38152CE6983DA51.idx  SDL_asyncio_c.h.FCB69B3625C7BE09.idx  SDL_asyncio_generic.c.8AE92715F06CA425.idx  SDL_asyncio_liburing.c.3BE30E64BA9EA2DB.idx  SDL_atomic.c.5AFEBC4D91751E79.idx  SDL_atomic.h.BE04C875B18F3523.idx  SDL_audio.c.616ED65227A872D3.idx  SDL_audio.h.02D1A7EE1FC07DC1.idx  SDL_audio_c.h.645C20CB976E6E32.idx  SDL_audio_channel_converters.h.33A9989C57C8C406.idx  SDL_audiocvt.c.F3A1B8EB368DD338.idx  SDL_audiodev.c.51269DC5F762E328.idx  SDL_audioqueue.c.CCA4C96118DEC4E4.idx  SDL_audioqueue.h.2826726D760A7BD9.idx  SDL_audioresample.c.D75F423E56E1C90A.idx  SDL_audioresample.h.02F1A19BE7B56E37.idx  SDL_audiotypecvt.c.9E23B76DBCACB288.idx  SDL_begin_code.h.58608428A59517AA.idx  SDL_bits.h.6CEACC1051B95780.idx  SDL_blendfillrect.c.3353BE2E4808143A.idx  SDL_blendfillrect.h.BE0E64545952C9C5.idx  (+610 more)
src/: '  PieceTable.cpp  PieceTable.h  TTFQuickRef.cpp  main.cpp  main_test.cpp
